--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -143,7 +143,7 @@
         "from IPython.display import HTML\n",
         "print('')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +173,7 @@
         "}\n",
         "</style>"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -722,7 +722,7 @@
         "Atraf = pd.read_table('data/net-traffic/AbileneFlows/X',sep='  ',header=None,\n",
         "                      names=odnames,engine='python')"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -772,7 +772,7 @@
         "Atraf.index = dates\n",
         "Atraf"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1864,7 +1864,7 @@
         "plt.title(r'Singular Values of $A$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1922,7 +1922,7 @@
         "plt.ylabel(r'$\\sigma_k$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1983,7 +1983,7 @@
         "plt.title(r'Relative Error of rank-$k$ approximation to $A$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2025,7 +2025,7 @@
       "source": [
         "s[0:10]/Anorm"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2196,7 +2196,7 @@
         "plt.imshow(boat,cmap = cm.Greys_r)\n",
         "print('')"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2250,7 +2250,7 @@
         "plt.figure()\n",
         "plt.plot(s)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2322,7 +2322,7 @@
         "plt.subplots_adjust(wspace=0.5)\n",
         "print('')"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2432,7 +2432,7 @@
         "uframe[0].plot()\n",
         "uframe[1].plot()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2480,7 +2480,7 @@
         "uframe[2].plot()\n",
         "uframe[3].plot()"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2761,7 +2761,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('First 12 Columns of $U$',size=20)"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2811,11 +2811,11 @@
       "metadata": {
         "id": "PrWNyglze-pe",
         "colab_type": "code",
+        "outputId": "fb4d6657-6798-4e75-d1f9-2cbacfebfadd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 313
-        },
-        "outputId": "fb4d6657-6798-4e75-d1f9-2cbacfebfadd"
+        }
       },
       "source": [
         "u_prime = u[:,0:6]\n",
@@ -2830,7 +2830,7 @@
         "plt.xlabel('10-minutes intervals')\n",
         "plt.title(r'$\\ell_2$ Norm of Anomalous Traffic')"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2894,7 +2894,7 @@
         "plt.title('Top 15 Anomalies')\n",
         "plt.xlabel('10-minutes intervals')"
       ],
-      "execution_count": 60,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2940,6 +2940,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "0BfD6S75JvrY",
+        "colab_type": "text"
+      },
+      "source": [
+        "*Araldo*: We want to recognize \"fake\" users, i.e., profiles created (or legitimate profiles compromised) in order to perform malicious activity, as artificially increasing the number of likes of certain pages, which may pay for this kind of \"service\" to gain popularity [1]."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "mCJetOWAIhfs",
         "colab_type": "text"
       },
@@ -2978,7 +2988,7 @@
         "plt.title('Number of Likes Per User')\n",
         "plt.xlabel('Users')"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3040,7 +3050,7 @@
         "plt.xlabel(r'$k$',size=20)\n",
         "plt.ylabel(r'$\\sigma_k$',size=20)"
       ],
-      "execution_count": 61,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3094,11 +3104,11 @@
       "metadata": {
         "id": "YeuSC60Oig9e",
         "colab_type": "code",
+        "outputId": "1bb934a3-205a-4276-c794-460eed2a6b5c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
-        },
-        "outputId": "1bb934a3-205a-4276-c794-460eed2a6b5c"
+        }
       },
       "source": [
         "u_prime = u[:,0:25]\n",
@@ -3116,7 +3126,7 @@
         "plt.plot(anomSet,FBSnorm[anomSet],'ro')\n",
         "plt.title('Top 30 Anomalous Users')"
       ],
-      "execution_count": 63,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3179,7 +3189,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Anomalous Users',size=20)"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3246,7 +3256,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Normal Users',size=20)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3329,7 +3339,7 @@
         "u,s,vt = np.linalg.svd(FBTemporal,full_matrices=False)\n",
         "plt.plot(s/np.linalg.norm(FBTemporal))"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3395,7 +3405,7 @@
         "plt.plot(FBTnorm)\n",
         "plt.plot(anomSet,FBTnorm[anomSet],'ro')"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3458,7 +3468,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Anomalous Users',size=20)"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3515,7 +3525,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Normal Users',size=20)"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
