Added info on scaling

--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -69,17 +69,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qsArBljWJjCD",
-        "colab_type": "text"
-      },
-      "source": [
-        "# TODO\n",
-        "Is the dataset centered before applying SVD?"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "f2SVPGejIhdW",
         "colab_type": "text"
       },
@@ -143,7 +132,7 @@
         "from IPython.display import HTML\n",
         "print('')"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +162,7 @@
         "}\n",
         "</style>"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -722,7 +711,7 @@
         "Atraf = pd.read_table('data/net-traffic/AbileneFlows/X',sep='  ',header=None,\n",
         "                      names=odnames,engine='python')"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -768,7 +757,7 @@
         "Atraf.index = dates\n",
         "Atraf"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1832,6 +1821,20 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "P0EQTYdNjII3",
+        "colab_type": "text"
+      },
+      "source": [
+        "*Araldo*: **Attention to scaling and centering**\n",
+        "\n",
+        "In most cases (and likely with your dataset) you need to scale your dataset before applying SVD, otherwise the features with big magnitude will monopolize the decomposition. MinMax scaling and Standard scaling also center all the columns of the dataset aroung their mean, which is also useful, as it makes the decomposition insensible to the mean of each column.\n",
+        "\n",
+        "However, in this notebook, Marc Crovella decided not to scale the dataset. In this case, this is acceptable, as all the columns have the same semantics and the same magnitude (they are all traffic counts). If you have columns with heterogeneous semantics (which is most likely your case), you need instead to scale your dataset before!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "qyPx8X1QsbNj",
         "colab_type": "text"
       },
@@ -1860,7 +1863,7 @@
         "plt.title(r'Singular Values of $A$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1918,7 +1921,7 @@
         "plt.ylabel(r'$\\sigma_k$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1992,7 +1995,7 @@
       "source": [
         "s[0:10]/Anorm"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2163,7 +2166,7 @@
         "plt.imshow(boat,cmap = cm.Greys_r)\n",
         "print('')"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2217,7 +2220,7 @@
         "plt.figure()\n",
         "plt.plot(s)"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2289,7 +2292,7 @@
         "plt.subplots_adjust(wspace=0.5)\n",
         "print('')"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2389,8 +2392,7 @@
         "colab_type": "code",
         "outputId": "d6587aa7-6264-4c43-f5af-5f5f23643aaa",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -2399,7 +2401,7 @@
         "uframe[0].plot()\n",
         "uframe[1].plot()"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2439,15 +2441,14 @@
         "colab_type": "code",
         "outputId": "b6dc1b68-0261-4669-83dc-8288a2bee062",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "uframe[2].plot()\n",
         "uframe[3].plot()"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2728,7 +2729,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('First 12 Columns of $U$',size=20)"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2797,7 +2798,7 @@
         "plt.xlabel('10-minutes intervals')\n",
         "plt.title(r'$\\ell_2$ Norm of Anomalous Traffic')"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2845,11 +2846,11 @@
       "metadata": {
         "id": "vYGM1gZTIhfn",
         "colab_type": "code",
+        "outputId": "ada1dd4b-ea8d-460d-a0f4-3309f6a54721",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 311
-        },
-        "outputId": "ada1dd4b-ea8d-460d-a0f4-3309f6a54721"
+        }
       },
       "source": [
         "# choose the top 15 anomalies\n",
@@ -2861,7 +2862,7 @@
         "plt.title('Top 15 Anomalies')\n",
         "plt.xlabel('10-minutes intervals')"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2941,11 +2942,11 @@
       "metadata": {
         "id": "pEgaWVPiIhft",
         "colab_type": "code",
+        "outputId": "b3a6104b-9a4f-425a-ef3d-1b33764341a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 311
-        },
-        "outputId": "b3a6104b-9a4f-425a-ef3d-1b33764341a3"
+        }
       },
       "source": [
         "data = np.loadtxt('data/social/data/spatial_data.txt')\n",
@@ -2955,7 +2956,7 @@
         "plt.title('Number of Likes Per User')\n",
         "plt.xlabel('Users')"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3003,11 +3004,11 @@
       "metadata": {
         "id": "7vKOc4hqIhfx",
         "colab_type": "code",
+        "outputId": "43f202ed-d08a-478f-83b8-ba4e0d342e42",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 321
-        },
-        "outputId": "43f202ed-d08a-478f-83b8-ba4e0d342e42"
+        }
       },
       "source": [
         "u,s,vt = np.linalg.svd(FBSpatial,full_matrices=False)\n",
@@ -3017,7 +3018,7 @@
         "plt.xlabel(r'$k$',size=20)\n",
         "plt.ylabel(r'$\\sigma_k$',size=20)"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3071,11 +3072,11 @@
       "metadata": {
         "id": "YeuSC60Oig9e",
         "colab_type": "code",
+        "outputId": "ecfb35de-7bf9-4fdb-cfc2-bb6820e1728e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        },
-        "outputId": "ecfb35de-7bf9-4fdb-cfc2-bb6820e1728e"
+        }
       },
       "source": [
         "u_prime = u[:,0:25]\n",
@@ -3093,7 +3094,7 @@
         "plt.plot(anomSet,FBSnorm[anomSet],'ro')\n",
         "plt.title('Top 30 Anomalous Users')"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3151,11 +3152,11 @@
       "metadata": {
         "id": "djpZ1njtIhf3",
         "colab_type": "code",
+        "outputId": "191587b0-6160-403d-e45b-4f373fad8a53",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 447
-        },
-        "outputId": "191587b0-6160-403d-e45b-4f373fad8a53"
+        }
       },
       "source": [
         "plt.figure(figsize=(9,6))\n",
@@ -3166,7 +3167,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Anomalous Users',size=20)"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3214,11 +3215,11 @@
       "metadata": {
         "id": "k-A_uPiGIhf6",
         "colab_type": "code",
+        "outputId": "db61fbed-a3fc-49d5-a9c7-d89395a05307",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 447
-        },
-        "outputId": "db61fbed-a3fc-49d5-a9c7-d89395a05307"
+        }
       },
       "source": [
         "# choose non-anomalous users\n",
@@ -3233,7 +3234,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Normal Users',size=20)"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3313,11 +3314,11 @@
       "metadata": {
         "id": "Qqx7xvHzIhgA",
         "colab_type": "code",
+        "outputId": "d7bff24d-cf72-4274-d548-ed3c05af45e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        },
-        "outputId": "d7bff24d-cf72-4274-d548-ed3c05af45e1"
+        }
       },
       "source": [
         "data = np.loadtxt('data/social/data/temporal_data.txt')\n",
@@ -3326,7 +3327,7 @@
         "u,s,vt = np.linalg.svd(FBTemporal,full_matrices=False)\n",
         "plt.plot(s/np.linalg.norm(FBTemporal))"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3377,11 +3378,11 @@
       "metadata": {
         "id": "oNmofJbpOyww",
         "colab_type": "code",
+        "outputId": "650a9780-3760-4806-9fd0-12e2e44491cf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        },
-        "outputId": "650a9780-3760-4806-9fd0-12e2e44491cf"
+        }
       },
       "source": [
         "u_prime = u[:,0:24]\n",
@@ -3397,7 +3398,7 @@
         "plt.plot(FBTnorm)\n",
         "plt.plot(anomSet,FBTnorm[anomSet],'ro')"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3445,11 +3446,11 @@
       "metadata": {
         "id": "1NbQWb9WIhgH",
         "colab_type": "code",
+        "outputId": "798767ef-47d2-4551-9a0a-98a33520e715",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 447
-        },
-        "outputId": "798767ef-47d2-4551-9a0a-98a33520e715"
+        }
       },
       "source": [
         "plt.figure(figsize=(9,6))\n",
@@ -3460,7 +3461,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Anomalous Users',size=20)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3498,11 +3499,11 @@
       "metadata": {
         "id": "hWeEnq1xIhgJ",
         "colab_type": "code",
+        "outputId": "2e011afb-7c6a-44a1-9660-5fd24877f7d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 447
-        },
-        "outputId": "2e011afb-7c6a-44a1-9660-5fd24877f7d6"
+        }
       },
       "source": [
         "# choose non-anomalous users\n",
@@ -3517,7 +3518,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Normal Users',size=20)"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
