More info on scaling

--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -1825,11 +1825,15 @@
         "colab_type": "text"
       },
       "source": [
-        "*Araldo*: **Attention to scaling and centering**\n",
+        "*Araldo*: **Attention to standardizing and centering**\n",
         "\n",
-        "In most cases (and likely with your dataset) you need to scale your dataset before applying SVD, otherwise the features with big magnitude will monopolize the decomposition. MinMax scaling and Standard scaling also center all the columns of the dataset aroung their mean, which is also useful, as it makes the decomposition insensible to the mean of each column.\n",
+        "Your dataset may have columns with different magnitudes, e.g., columms are in different unities of measurement, for instance bytes, gygabytes, 5-stars-ratings and audio bitrates all in the same dataset, if you apply Singular Value Decomposition (SVD) right away, the columns with the highest magnitude risk to monopolize the decomposition. \n",
         "\n",
-        "However, in this notebook, Marc Crovella decided not to scale the dataset. In this case, this is acceptable, as all the columns have the same semantics and the same magnitude (they are all traffic counts). If you have columns with heterogeneous semantics (which is most likely your case), you need instead to scale your dataset before!"
+        "In such cases, it is advisable to apply StandardScaler to your dataset and apply SVD to the transformed dataset. Observe that Standard scaling also center all the columns of the dataset aroung their mean, which is also useful, as it makes the decomposition insensible to the mean of each column.\n",
+        "\n",
+        "However, in this notebook, Marc Crovella decided not to scale and center the dataset. In his case, this is acceptable, as all the columns have the same semantics and the same magnitude (they are all traffic counts).\n",
+        "\n",
+        "To know more about scaling and dimensionality reduction, check Sec.11.5 of [11]."
       ]
     },
     {
@@ -3644,7 +3648,20 @@
         "\t\t\t[ Earlier version. Published as BUCS Technical Report BUCS-TR-2003-021 and Sprint Research Report RR03-ATL-110708 ]\n",
         "</td>\n",
         "</tr>\n",
+        "\n",
+        "<tr>\n",
+        "<td valign=\"baseline\" align=\"left\" class=\"p\">\n",
+        "[11]\n",
+        "Härdle, W. K., & Simar, L. (2015). Applied multivariate statistical analysis, fourth edition. Applied Multivariate Statistical Analysis, Fourth Edition (4th ed.). https://doi.org/10.1007/978-3-662-45171-7\n",
+        "</td>\n",
+        "</tr>\n",
+        "\n",
+        "<tr>\n",
+        "<td valign=\"baseline\" align=\"left\" class=\"p\">\n",
+        "[12]\n",
+        "[Singular Value Decomposition](https://online.stat.psu.edu/stat555/node/94/), STAT 555, Statistical Analysis of Genomics Data, PennState University.\n",
         "</table>\n",
+        "\n",
         "\n"
       ]
     },
