Removing a lot of text

--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -66,25 +66,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "oT1xO3SoIhda"
-      },
-      "source": [
-        "## Following Along and Experimenting\n",
-        "\n",
-        "In keeping with these goals, everything we'll do today -- the slides, and more importantly, all the code -- is available on github.\n",
-        "\n",
-        "https://github.com/mcrovella/mining-low-dim-network-data\n",
-        "\n",
-        "The slides and code are together in one document, in the form of an `ipython` notebook.  \n",
-        "\n",
-        "Assuming you have `ipython` installed, I recommend that you download or clone this repo and work with it during the talk.\n",
-        "\n",
-        "After today, please feel free to continue to experiment with the data and the code."
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "qsZbuB6vIhdb",
@@ -209,66 +190,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "otQhao-HIhdy"
-      },
-      "source": [
-        "I'd like to try to divide the world of network measurements into two categories:\n",
-        "\n",
-        "1. Measurements that reflect aggregate human activity.\n",
-        "2. Measurements that do not."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Ojf6_cVKIhdy"
-      },
-      "source": [
-        "In the first category I would place\n",
-        "\n",
-        "* network data traffic\n",
-        "    * traffic timeseries\n",
-        "    * source-destination traffic matrices\n",
-        "* social media\n",
-        "    * blogging/microblogging traffic\n",
-        "* mobile location traces\n",
-        "* mobile call traffic\n",
-        "* web browsing traces\n",
-        "* content popularity and user preferences"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "SHgxdTu-Ihd0"
-      },
-      "source": [
-        "In the second category I would place\n",
-        "\n",
-        "* network topology\n",
-        "    * router level\n",
-        "    * AS level\n",
-        "* network paths \n",
-        "* protocol traces\n",
-        "    * TCP, OSPF, BGP, IEEE 802"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kyedC4wvIhd1"
-      },
-      "source": [
-        "And there are some I am not sure of:\n",
-        "\n",
-        "* Spatial/geographic distribution of network elements\n",
-        "* Social network structure\n",
-        "* Attack and <div color='red'>malicious traffic</div> "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "collapsed": true,
         "id": "5jNCEC-JIhd2"
       },
@@ -299,323 +220,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "collapsed": true,
-        "id": "HAhzSBs8Ihd4"
-      },
-      "source": [
-        "# What Does the Low-Dimensional Phenomenon Mean?\n",
-        "\n",
-        "1. Effective Dimension \n",
-        "    2. Defining Effective Dimension\n",
-        "    3. Finding Effective Dimension\n",
-        "4. Empirical Evidence\n",
-        "5. Interpretation: \n",
-        "    2. Common Patterns\n",
-        "    3. Latent Factors"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "c1CoO6_LIhd6"
-      },
-      "source": [
-        "### Effective Dimension"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "GeIs-BUmIhd6"
-      },
-      "source": [
-        "We'll concern ourselves with tabular measurement data in the form of matrices.\n",
-        "\n",
-        "Rows, columns, and matrix elements can correspond to a wide variety of things.  Here are some examples.\n",
-        "\n",
-        "<table>\n",
-        "<tr><th>Data Type</th><th>Rows</th><th>Columns</th><th>Elements</th></tr>\n",
-        "<tr><td>Network Traffic<td>time bins</td><td>OD flows</td><td>Number of Bytes</td></tr>\n",
-        "<tr><td>Network Traffic<td>Sources</td><td>Destinations</td><td>Number of Bytes</td></tr>\n",
-        "<tr><td>Social Media</td><td>time bins</td><td>Users</td><td>Number of Posts/Tweets/Likes</td></tr>\n",
-        "<tr><td>Location Traces</td><td>time bins</td><td>Users</td><td>Location</td></tr>\n",
-        "<tr><td>Call Traffic</td><td>time bins</td><td>Users</td><td>Calling Volume</td></tr>\n",
-        "<tr><td>Web Browsing, Video Viewing</td><td>Users</td><td>Content Categories</td><td>Visit Counts/Bytes Downloaded</td></tr>\n",
-        "<tr><td>Web Browsing</td><td>time bins</td><td>Users</td><td>Visit Counts/Bytes Downloaded</td></tr>\n",
-        "<tr><td>Web Browsing</td><td>Users</td><td>Sites/Categories</td><td>Visit Counts/Bytes Downloaded</td></tr>\n",
-        "</table>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "IJHJB7mQIhd7"
-      },
-      "source": [
-        "From an information-theoretic standpoint, an $m\\times n$ matrix would seem to require $mn$ values to describe it. \n",
-        "\n",
-        "However, in practice such a matrix may not carry as much __important__ information as it appears.\n",
-        "\n",
-        "That is, there is often a smaller, or more \"parsimonious,\" description of this matrix that is a useful approximation."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "x8bC7morIhd8"
-      },
-      "source": [
-        "There are very many ways one might construct a concise descriptions of a dataset -- choosing a good one is a  general problem, called __model selection.__\n",
-        "\n",
-        "We're going to use a flexible and very simple modeling approach based on linear algebra: __effective rank.__  \n",
-        "\n",
-        "(The right term is \"effective rank\" but in later discussion I will use \"effective dimension\" because I think it is more helpful.)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "LC9AVMq7Ihd9"
-      },
-      "source": [
-        "Let's briefly review some linear algebra.\n",
-        "\n",
-        "We'll consider an $m\\times n$ real matrix $A$.\n",
-        "\n",
-        "The __rank__ of $A$ is the __dimension of its column space.__   \n",
-        "\n",
-        "The dimension of a space is the smallest number of (linearly independent) vectors needed to span the space.\n",
-        "\n",
-        "So the dimension of the column space of $A$ is the smallest number of vectors that suffice to  construct the columns of $A$."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "collapsed": true,
-        "id": "VqUTxIq6Ihd-"
-      },
-      "source": [
-        "More specifically, let's say we have \n",
-        "\n",
-        "$$A = \\mat{{cccc}\n",
-        "a_{11}&a_{12}&\\dots&a_{1n}\\\\\n",
-        "a_{21}&a_{22}&\\dots&a_{2n}\\\\\n",
-        "\\vdots& \\vdots & \\ddots& \\vdots\\\\\n",
-        "a_{m1}&a_{m2}&\\dots&a_{mn}\\\\\n",
-        "} = \\mat{{cccc}\\va_1&\\va_2&\\dots&\\va_n}$$\n",
-        "\n",
-        "where the $\\va_i \\in \\R^m$ are the columns of $A$."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "rOAmlJSuIheA"
-      },
-      "source": [
-        "Then the rank of $A$ is the size of the smallest set $\\{\\vu_1, \\vu_2, \\dots, \\vu_p\\}$ such that every $\\va_i$ can be expressed as:\n",
-        "\n",
-        "$$\\va_i = c_{i1}\\vu_1 + c_{i2}\\vu_2 + \\dots + c_{ip}\\vu_p\\;\\;\\;\\;i=1,\\dots,n.$$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bOetA4y4IheB"
-      },
-      "source": [
-        "One of the remarkable results in linear algebra is that the dimension of the column space of $A$ is equal to the dimension of the row space of $A$.   \n",
-        "\n",
-        "So there is nothing special about the columns;  we could have used the rows to define the rank and the result would be the same.   \n",
-        "\n",
-        "In other works, $\\rank\\ A = \\rank\\ A^T$."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WQpUzj_tIheC"
-      },
-      "source": [
-        "To talk about when one matrix \"approximates\" another, we need a \"length\" for matrices.  \n",
-        "\n",
-        "We will use the __Frobenius norm__ which is just the usual $\\ell_2$ norm, treating the matrix as a vector.\n",
-        "\n",
-        "The definition of the Frobenius norm of $A$, denoted $\\Vert A\\Vert_F$, is:\n",
-        "\n",
-        "$$\\Vert A\\Vert_F = \\sqrt{\\sum a_{ij}^2}.$$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7xjVE2GbIheE"
-      },
-      "source": [
-        "To quantify when one matrix is \"close\" to another, we use distance in Euclidean space:\n",
-        "\n",
-        "$$\\mbox{dist}(A,B) = \\Vert A-B\\Vert_F.$$\n",
-        "\n",
-        "(where the Euclidean space is the $mn$-dimensional space of $m\\times n$ matrices.)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WCZYWtB6IheG"
-      },
-      "source": [
-        "Now we can define the __rank-$k$ approximation__ to $A$:\n",
-        "\n",
-        "When $k < \\rank\\ A$, the rank-$k$ approximation to $A$ is the closest rank-$k$ matrix to $A$, i.e., \n",
-        "\n",
-        "$$A^{(k)} =\\arg \\min_{\\{B\\;|\\;\\rank\\ B = k\\}} \\Vert A-B\\Vert_F.$$\n",
-        "\n",
-        "This can also be considered the best rank-$k$ approximation to $A$ in a least-squares sense."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "W4VwuKl0IheI"
-      },
-      "source": [
-        "### Working with rank-$k$ approximations\n",
-        "\n",
-        "Let's say we have $A^{(k)}$, a rank-$k$ approximation to $A$.  \n",
-        "\n",
-        "By definition, there is a set $U$ consisting of $k$ vectors such that each column of $A^{(k)}$ can be expressed as a linear combination of vectors in $U$.   \n",
-        "\n",
-        "Let us abuse notation and also call the matrix formed by those vectors $U$.\n",
-        "\n",
-        "So \n",
-        "\n",
-        "$$A^{(k)} = UV^T$$\n",
-        "\n",
-        "for some set of coefficients $V^T$ that describe the linear combinations of $U$ that yield the columns of $A^{(k)}$. \n",
-        "\n",
-        "So $U$ is $m\\times k$ and $V$ is $n\\times k$."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "GnI3_2p9IheJ"
-      },
-      "source": [
-        "Concretely, this is:\n",
-        "    \n",
-        "$$ m\\left\\{\\begin{array}{c}\\;\\\\\\;\\\\\\;\\\\\\;\\\\\\;\\end{array}\\right.\\;\\;\\overbrace{\\left[\\begin{array}{cccc}\\begin{array}{c}\\vdots\\\\\\vdots\\\\{\\bf a_1}\\\\\\vdots\\\\\\vdots\\end{array}&\\begin{array}{c}\\vdots\\\\\\vdots\\\\{\\bf a_2}\\\\\\vdots\\\\\\vdots\\end{array}&\\dots&\\begin{array}{c}\\vdots\\\\\\vdots\\\\{\\bf a_n}\\\\\\vdots\\\\\\vdots\\end{array}\\\\\\end{array}\\right]}^{\\large n} =\n",
-        "\\overbrace{\\left[\\begin{array}{cc}\\vdots&\\vdots\\\\\\vdots&\\vdots\\\\\\vu_1&\\vu_k\\\\\\vdots&\\vdots\\\\\\vdots&\\vdots\\end{array}\\right]}^{\\large k}\n",
-        "\\times\n",
-        "\\left[\\begin{array}{ccccc}\\dots&\\dots&\\vv_1&\\dots&\\dots\\\\\\dots&\\dots&\\vv_k&\\dots&\\dots\\end{array}\\right]$$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "c7RUp7seqyPA"
-      },
-      "source": [
-        "*Araldo*: By computing this multiplication term by term, you can observe that, for instance, $\\mathbf{a}_1 = \\sum_{j=1}^k v_{j1} \\cdot \\mathbf{u}_j$. This is why $V$ is the matrix of coefficients."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RRiwkp4pIheK"
-      },
-      "source": [
-        "A rank-$k$ approximation $A^{(k)}$ is valuable if \n",
-        "\n",
-        "* $\\Vert A-A^{(k)}\\Vert_F$ is small compared to $\\Vert A\\Vert_F$, and \n",
-        "* $k$ is small compared to $m$ and $n$.\n",
-        "\n",
-        "In that case we have achieved a reduction in model size without a great loss in accuracy."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "CtMfobJlIheK"
-      },
-      "source": [
-        "### Finding rank-$k$ approximations"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "IDMu6e98IheL"
-      },
-      "source": [
-        "There is a celebrated method for finding the best rank-$k$ approximation to any matrix: the Singular Value Decomposition (SVD).\n",
-        "\n",
-        "In fact, for an $m\\times n$ matrix $A$, the SVD does two things:\n",
-        "\n",
-        "1. It gives the best rank-$k$ approximation to $A$ for __every__ $k$ up to the rank of $A$.\n",
-        "2. It gives the __distance__ of the best approximation $A^{(k)}$ from $A$ for each $k$."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "sSO0W3DhIheM"
-      },
-      "source": [
-        "The singular value decomposition of a rank-$r$ matrix $A$ has the form:\n",
-        "\n",
-        "$$A = U\\Sigma V^T$$\n",
-        "\n",
-        "where \n",
-        "\n",
-        "1. $U$ is $m\\times r$\n",
-        "2. The columns of $U$ are mutually orthogonal and unit length, ie., $U^TU = I$.\n",
-        "3. $V$ is $n\\times r$.\n",
-        "4. The columns of $V$ are mutually orthogonal and unit length, ie., $V^TV = I$.\n",
-        "5. The matrix $\\Sigma$ is a $r\\times r$ diagonal matrix, whose diagonal values are $\\sigma_1 \\geq \\sigma_2 \\geq \\dots \\geq \\sigma_r > 0$."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "EkqBlcIKr11X"
-      },
-      "source": [
-        "*Araldo*: \n",
-        "\n",
-        "**Theorem**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7fMLfhDeIheM"
-      },
-      "source": [
-        "In terms of the singular value decomposition, \n",
-        "\n",
-        "1) The distance (in Frobenius norm) of the best rank-$k$ approximation $A^{(k)}$ from $A$ is equal to $\\sqrt{\\sum_{i=k+1}^r\\sigma^2_i}$.\n",
-        "\n",
-        "2) The best rank-$k$ approximation to $A$ is formed by taking \n",
-        "\n",
-        "* $U' = $ the $k$ leftmost columns of $U$, \n",
-        "* $ \\Sigma' = $ the $k\\times k$ upper left submatrix of $\\Sigma$, and \n",
-        "* $V'= $ the $k$ leftmost columns of $V$, and constructing \n",
-        "\n",
-        "$$ A^{(k)} = U'\\Sigma'(V')^T.$$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "1X4fvQoyIheO"
       },
       "source": [
         "## Empirical Evidence\n",
         "\n",
-        "Let's see how this theory can be used in practice, and investigate some real data.\n",
+        "Let's see how dimensionality reduction can be used in practice, and investigate some real data.\n",
         "\n",
         "We'll look at OD flow traffic on the Abilene network:\n",
         "\n",
